--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx}\""
   },
   "dependencies": {
+    "chart.js": "^4.4.9",
     "framer-motion": "^12.14.0",
     "localforage": "^1.10.0",
     "next": "^14.2.29",
     "next-pwa": "^5.6.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
+    "react-icons": "^5.5.0",
     "swr": "^2.2.5",
     "tailwindcss": "^3.4.1",
     "zustand": "^5.0.0-rc.2"
