--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-responsive": "^10.0.1",
+    "react-window": "^1.8.11",
     "swr": "^2.2.5",
     "tailwindcss": "^3.4.1",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^22.7.7",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "@types/react-window": "^1.8.8",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.29",
