--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "chart.js": "^4.4.9",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "framer-motion": "^12.14.0",
     "localforage": "^1.10.0",
     "next": "^14.2.29",
