--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chartjs-adapter-date-fns": "^3.0.0",
     "framer-motion": "^12.14.0",
     "localforage": "^1.10.0",
+    "lodash.debounce": "^4.0.8",
     "next": "^14.2.29",
     "next-pwa": "^5.6.0",
     "react": "^18.3.1",
